# distill-AI-research-assistant

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: chunker.py  cosine_similarity.py  ingestion.py  ui.py
